hphp/test/zend7/Zend/tests/assert/expect_007.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sexpect_007.php on line 10